<resources>
    <string name="app_name">Fidebox</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="pw">Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Profile">Profile</string>
    <string name="field_username">username</string>
    <string name="field_useremail">useremail</string>
    <string name="field_userbirthday">userbirthday</string>
    <string name="field_usergender">usergender</string>
    <string name="field_userbio">userbio</string>
    <string name="field_userprofilephoto">userprofile_photo</string>
    <string name="field_display_name">display_name</string>
    <string name="field_description">description</string>
    <string name="field_userId">userId</string>
    <string name="field_cvId">cvId</string>
    <string name="field_intended_reader">intended_reader</string>
    <string name="field_likes">likes</string>
    <string name="field_giggles">giggles</string>
    <string name="field_date_created">date_created</string>
    <string name="field_date_drafted">date_drafted</string>
    <string name="field_photo_id">photo_id</string>
    <string name="doc_stat">--stat--</string>
    <string name="doc_notificationSettings">notificationSettings</string>
    <string name="field_number">number</string>
    <string name="field_count">count</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="field_content">content</string>
    <string name="field_title">title</string>
    <string name="field_letter_id">letter_id</string>
    <string name="field_category">category</string>
    <string name="field_comments">comments</string>
    <string name="field_comment_id">comment_id</string>
    <string name="field_parent_comment_id">parent_comment_id</string>
    <string name="field_child_comments">child_comments</string>
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="users">users</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="loginemail">Email</string>
    <string name="logindinformationdisplayed">Information Displayed</string>
    <string name="login">Login</string>
    <string name="loginsignup">Sign up</string>
    <string name="loginpwhint">Password</string>
    <string name="loginforgotpw">Forgot Password?</string>
    <string name="logindonothaveac">Don\'t have an account?</string>
    <string name="signup_have_an_account">Already have an account?</string>
    <string name="loginsignin">Sign in</string>
    <string name="loginnext">Next</string>
    <string name="profilename">Name</string>
    <string name="profileage">Age</string>
    <string name="profileemail">Email</string>
    <string name="profileedit">Edit</string>
    <string name="profilechangepw">Change Password</string>
    <string name="profile">Profile</string>
    <string name="expand_or_collapse">Expand or collapse failure</string>
    <string name="add_failure_item">Add failure item</string>
    <string name="remove_failure_item">Remove failure item</string>
    <string name="Empty">Empty</string>
    <string name="d">%1$sd</string>
    <string name="Today">tdy</string>
    <string name="SAVE">SAVE</string>
    <string name="editprofile">Edit Profile</string>
    <string name="birthday_format">yyyy/mm/dd</string>
    <string name="Edit">Edit</string>
    <string name="Gender">Gender</string>
    <string name="Birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="Bio">Bio</string>
    <string name="Private">Private</string>
    <string name="title_activity_log">Activity_logActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="confirm_comment_dialog">ConfirmCommentDialog</string>
    <string name="gender_dialog">GenderDialog</string>
    <string name="reader_dialog">ReaderDialog</string>
    <string name="alert_invalidemail">Invalid email</string>
    <string name="alert_invalidemailctn">The entered email is invalid. Please check your email.\n</string>
    <string name="alert_ok">OK</string>
    <string name="alert_wrongpw">Wrong password</string>
    <string name="alert_wrongpwctn">The password that you have entered is incorrect. Please check your password.\n</string>
    <string name="alert_usermismatch">User Mismatch</string>
    <string name="alert_wrongemail">Incorrect username</string>
    <string name="alert_wrongemailctn">The email that you have entered does not appear to belong to an account. Please check your email.\n</string>
    <string name="alert_weakpassword">Invalid password</string>
    <string name="alert_weakpasswordctn">The password is invalid it must 6 characters at least.\n</string>
    <string name="alert_emailinuse">Invalid email</string>
    <string name="alert_emailinusectn">The email address is already in use by another account.\n</string>
    <string name="alert_empty">Incomplete user information</string>
    <string name="alert_emptyctn">Please enter required information in all the fields.</string>
    <string name="regusername">Username</string>
    <string name="Sign_up">Sign up</string>
    <string name="regemail">Email</string>
    <string name="reglogin">Login</string>
    <string name="regpw">Password</string>
    <string name="regbirthday">Birthday</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lifeadvice">How comfortable are you with giving life advice?</string>
    <string name="reg_datehint">MM/DD/YYYY</string>
    <string name="reg_nonbinary">Non-binary</string>
    <string name="reg_emailreminder">The name has been taken</string>
    <string name="inforeminder">Why do we need your birthyear and gender? Telling us your gender and birthyear can help us find better a match for you.</string>
    <string name="regsignup">Sign up</string>
    <string name="reg_success">Success</string>
    <string name="reg_successctn">Welcome to Fidemmail. Just one more step to get things going.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Error">Error</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Sign_out">Sign out</string>
    <string name="Settings">Settings</string>
    <string name="More">More</string>
    <string name="Email">Email</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="loading">loading</string>
    <string name="emailInUse">The email is already in use. </string>
    <string name="emailInvalid">The email is invalid. </string>
    <string name="usernameExists">The username already exists. </string>
    <string name="wrong_password">Wrong password. </string>
    <string name="empty_field">This field cannot be empty</string>
    <string name="Nonbinary">Non-binary</string>
    <string name="intended_reader">Intended reader</string>
    <string name="Prefer_not_to_say">Prefer not to say</string>
    <string name="password_request">You must enter a password. </string>
    <string name="button_request">You must choose a button. </string>
    <string name="attempt_to_upload_photo">Attempting to upload new photo</string>
    <string name="view_comment_fragment">ViewCommentFragment</string>
    <string name="write_fragment">WriteFragment</string>
    <string name="write_n_draft_fragment">Write_n_draftFragment</string>
    <string name="intened_reader_dialog_fragment">IntendedReaderDialogFragment</string>
    <string name="category_dialog_fragment">CategoryDialogFragment</string>
    <string name="Draft_Letters">Draft Letters</string>
    <string name="Write">Write</string>
    <string name="Send">Send</string>
    <string name="Sent">Sent</string>
    <string name="Rank">Rank</string>
    <string name="Comments">Comments</string>
    <string name="Points">Points</string>
    <string name="messages">Messages</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="view_profile_fragment">View Profile Fragment</string>
    <string name="Choose_a_category">Choose a category</string>
    <string name="backarrow">backarrow</string>
    <string name="Reader">Reader</string>
    <string name="All">All</string>
    <string name="draft_saved">Draft saved</string>
    <string name="draft_saved_fail">Draft save failed</string>
    <string name="Draft">Draft</string>
    <string name="confirm_delete">Are you sure you want to delete this?</string>
    <string name="depth">depth</string>
    <string name="ACTIVITY_NUM">ACTIVITY_NUM</string>
    <string name="CVs">CVs</string>
    <string name="Letter">Letter</string>
    <string name="CV">CV</string>
    <string name="user_object">user_object</string>
    <string name="display_name">display_name</string>
    <string name="position">position</string>
    <string name="save_failed">Save failed</string>
    <string name="send_failed">Send failed</string>
    <string name="empty_draftbox">Your draftbox is empty</string>
    <string name="Comment">Comment</string>
    <string name="document_reference">document_reference</string>
    <string name="dialog_confirm_comment">Are you sure you want to discard your comment?</string>
    <string name="dialog_signout">Are you sure you want to sign out? </string>
    <string name="no_category">(No category)</string>
    <string name="empty" translatable="true">(empty)</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="reaffirem_password">Reaffirm new password</string>
    <string name="Account">Account</string>
    <string name="Football">Football</string>
    <string name="Politics">Politics</string>
    <string name="Life">Life</string>
    <string name="Relationship">Relationship</string>
    <string name="Attribution">Attribution</string>
    <string name="attribution_statement">The following sets forth attribution notices for third party icons and software
    that may be contained in portions of the Fidebox product.
    </string>
    <string name="icon_attribution_1">Icons made by Pixel perfect from https://www.flaticon.com/authors/pixel-perfect</string>
    <string name="icon_attribution_2">Icons made by icongeek26 from https://www.flaticon.com/authors/icongeek26</string>
    <string name="third_party_software">Third party software</string>
</resources>