<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editprofile"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/editprofile">
    </item>

    <item
        android:id="@+id/settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/Settings">
    </item>

    <item
        android:id="@+id/signout"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/Sign_out">
    </item>

    <item
        android:id="@+id/more"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/More">
    </item>


</menu>