<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.AttributionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Attribution"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attribution_statement"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:text="@string/icon_attribution_1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:text="@string/icon_attribution_2"
        />

    <TextView
        android:id="@+id/third_party_software"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDeepBlue"
        android:padding="10dp"
        android:text="@string/third_party_software"
        />

</LinearLayout>