<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Apptitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="80dp"
            android:autoSizeMaxTextSize="100sp"
            android:filterTouchesWhenObscured="false"
            android:gravity="center_horizontal"
            android:maxWidth="400dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="70sp" />
        <!--    android:fontFamily="@font/dancing_script"  -->

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_below="@+id/Apptitle"
            android:layout_marginTop="30dp"
            android:background="@drawable/white_grey_border">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="0dp"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/loginemail"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textSize="@dimen/normalsize" />


            </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/text_input_layout2"
                    android:layout_below="@id/text_input_layout1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidth="0dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/loginpwhint"
                        android:inputType="textPassword"
                        android:textSize="@dimen/normalsize" />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout2"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/loginsignin"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@id/relLayout1"
            android:text="@string/loginforgotpw"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/smallsize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/white_grey_border">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/btmtv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logindonothaveac" />

                <TextView
                    android:id="@+id/tvsignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@id/btmtv1"
                    android:layout_toEndOf="@id/btmtv1"
                    android:text="@string/loginsignup"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />
            </RelativeLayout>

        </RelativeLayout>


        <include layout="@layout/progress_bar_main"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>