<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:clickable="true"
    android:longClickable="true"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            >

<!--            android:fitsSystemWindows="true"-->

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/write_n_draft_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_backArrow"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/backarrow"
                        app:srcCompat="@drawable/ic_backarrow" />

                    <TextView
                        android:id="@+id/tvprofile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/toolbar_to_arrow_margin"
                        android:layout_marginLeft="@dimen/toolbar_to_arrow_margin"
                        android:text="@string/Account"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/toolbar_font" />

                    <TextView
                        android:id="@+id/tv_confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/toolbar_to_right_margin"
                        android:layout_marginRight="@dimen/toolbar_to_right_margin"
                        android:text="@string/Confirm"
                        android:textColor="@color/colorBlack" />
                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/tv_change_password"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AppBarLayout"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/normalsize"
            android:textStyle="bold"
            android:text="@string/change_password" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_1"
                android:layout_below="@+id/tv_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/normalsize" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout_1"
                android:id="@+id/text_input_layout_2"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/normalsize" />


            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_3"
                android:layout_below="@+id/text_input_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                android:layout_margin="10dp"
                >

                <EditText
                    android:id="@+id/etReaffirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/reaffirem_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/normalsize" />
            </com.google.android.material.textfield.TextInputLayout>




        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_3"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorBlack"
            android:text="@string/forgot_password"
            />

        <include
            layout="@layout/progress_bar_main"/>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

