<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grey_border_topnbottom"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <TextView
            android:contentDescription="@string/profile_picture"
            android:id="@+id/tv_draft"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintVertical_bias="0.02"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:text="@string/Draft"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/ic_grey_circle"
            />



        <TextView
            android:id="@+id/tv_draft_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_draft"
            app:layout_constraintStart_toEndOf="@id/tv_draft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.17"
            app:layout_constraintHorizontal_bias="0.02"
            android:text="@string/no_category"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/tv_draft_failure_1"
            app:layout_constraintBottom_toBottomOf="@id/tv_draft"
            app:layout_constraintTop_toBottomOf="@id/tv_draft_category"
            app:layout_constraintStart_toStartOf="@id/tv_draft_category"
            app:layout_constraintEnd_toEndOf="@id/iv_delete"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.02"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/colorGrey"
            />


        <TextView
            android:id="@+id/tv_draft_date"
            app:layout_constraintBottom_toBottomOf="@id/tv_draft"
            app:layout_constraintTop_toTopOf="@id/tv_draft_category"
            app:layout_constraintStart_toEndOf="@id/tv_draft_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date"
            android:textColor="@color/colorBlack"
            />


        <ImageView
            android:id="@+id/iv_delete"
            app:layout_constraintBottom_toBottomOf="@id/tv_draft"
            app:layout_constraintTop_toTopOf="@id/tv_draft_category"
            app:layout_constraintStart_toEndOf="@id/tv_draft_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_delete"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/constraintLayout"
        android:background="@color/colorWhite"
        android:id="@+id/relLayout_progress_bar"
        >

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/progress_bar"
            android:theme="@style/ProgressTheme"
            />



    </RelativeLayout>
    -->

</RelativeLayout>
    <!--  android:progressDrawable="@color/colorWhite" -->
